# powershell-argcomplete-mwe

./: CHANGELOG.md  README.md  psamwe.complete.ps1  psamwe.complete.psm1  pyproject.toml
src/powershell_argcomplete_mwe/: __about__.py  __init__.py
src/powershell_argcomplete_mwe/cli/: __init__.py
